--- a/.github/workflows/build-installers.yml
+++ b/.github/workflows/build-installers.yml
@@ -47,6 +47,12 @@ jobs:
       - name: Install frontend dependencies
         run: npm install
 
+      - name: Install Linux dependencies
+        if: matrix.platform == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libglib2.0-dev libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev
+
       - name: Build installers
         uses: tauri-apps/tauri-action@v0
         env:
