--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "pocket"
+name = "anchor"
 version = "0.1.0"
-description = "A Tauri App"
+description = "Anchor Desktop - A production-grade desktop companion app for Anchor"
 authors = ["you"]
 edition = "2021"
 
@@ -11,20 +11,29 @@ edition = "2021"
 # The `_lib` suffix may seem redundant but it is necessary
 # to make the lib name unique and wouldn't conflict with the bin name.
 # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
-name = "pocket_lib"
-crate-type = ["staticlib", "cdylib", "rlib"]
+name = "anchor_lib"
+crate-type = ["cdylib", "rlib"]
+
+[[bin]]
+name = "anchor"
+path = "src/main.rs"
 
 [build-dependencies]
-tauri-build = { version = "2", features = [] }
+tauri-build = { version = "2.0", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = [] }
-tauri-plugin-opener = "2"
-tauri-plugin-updater = "2"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-rusqlite = { version = "0.31", features = ["bundled"] }
-chrono = { version = "0.4", features = ["serde"] }
+tauri = { version = "2.0", features = ["tray-icon", "image-ico", "image-png"] }
+tauri-plugin-shell = "2.0"
+tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
+tauri-plugin-notification = "2.0"
+nusb = "0.1.9"
 tokio = { version = "1", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
+rusqlite = { version = "0.31", features = ["bundled"] }
 rand = "0.8"
+tauri-plugin-audio-recorder = "0.1.0"
+tauri-plugin-fs-pro = "2.4.0"
+tauri-plugin-locale = "2.0.1"
 
